# scrapers

common/: Cargo.toml
common/src/: lib.rs
common/src/mango/: mod.rs
common/src/math/: common.rs  decimal.rs  error.rs  mod.rs  precise.rs  rate.rs
common/src/oracle/: mod.rs
common/src/solend/: mod.rs
common/src/spl_lending/: mod.rs
common/src/tulip/: lending_error.rs  lending_last_update.rs  lending_obligation.rs  lending_reserve.rs  mod.rs
db/: Cargo.toml  README.md
db/migrations/2021-10-26-082615_vault/: down.sql  up.sql
db/migrations/2021-10-27-224859_analytics/: down.sql  up.sql
db/migrations/2021-11-27-093643_alter_token_price_add_platform/: down.sql  up.sql
db/migrations/2021-11-28-050653_interest_rates/: down.sql  up.sql
db/migrations/2021-12-10-015529_alter_token_price_add_token_amounts/: down.sql  up.sql
db/migrations/2021-12-19-075806_alter_vault_tvl_rename_vault_name/: down.sql  up.sql
db/migrations/2021-12-20-050752_alter_deposit_tracking_add_tvl/: down.sql  up.sql
db/migrations/2021-12-20-072256_alter_vault_remove_constraint_unique/: down.sql  up.sql
db/migrations/2021-12-22-100912_alter_vault_add_last_compound_time/: down.sql  up.sql
db/migrations/2021-12-23-011137_create_token_balance/: down.sql  up.sql
db/migrations/2021-12-26-055702_staking_analytics/: down.sql  up.sql
db/migrations/2021-12-30-064903_realized_yield/: down.sql  up.sql
db/migrations/2021-12-30-191757_alter_vault_add_last_compound_time_unix/: down.sql  up.sql
db/migrations/2022-01-02-224244_interest_rate_curves/: down.sql  up.sql
db/migrations/2022-01-03-235829_alter_interest_rates_set_float/: down.sql  up.sql
db/migrations/2022-01-09-014025_lending_optimizer_distribution/: down.sql  up.sql
db/migrations/2022-01-09-033019_alter_token_price_add_asset_identifier/: down.sql  up.sql
db/migrations/2022-01-31-042236_create_interest_rate_moving_average/: down.sql  up.sql
db/migrations/2022-02-15-204340_yield/: down.sql  up.sql
db/migrations/2022-04-07-232326_update_staking_analytics_price/: down.sql  up.sql
db/migrations/2022-04-16-014631_v1_lending_accounts/: down.sql  up.sql
db/migrations/2022-04-23-091628_historic_share_prices/: down.sql  up.sql
db/migrations/2022-05-04-014332_alter_v1_lending_add_display_name/: down.sql  up.sql
db/migrations/2022-05-07-062348_alter_obligation_add_leveraged_farm/: down.sql  up.sql
db/migrations/2022-05-13-222714_alter_token_price_add_price_feed_information/: down.sql  up.sql
db/src/: client.rs  defaults.rs  filters.rs  lib.rs  models.rs  schema.rs
oracle/: Cargo.toml
oracle/src/: moving_average.rs
oracle/src/rate_lookup/: lookup.rs  mod.rs
scrapers/: Cargo.toml
scrapers/src/: interest_rates.rs  lib.rs
scrapers/src/v1/: mod.rs
